--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "node --env-file=.env server.js"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "express": "^5.1.0",
     "mime": "^2.6.0",
     "mongodb": "^6.19.0"
